Migrate Representation information REST