@@ -10,7 +10,6 @@ package org.roda.core.index.schema.collections;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrInputDocument;
@@ -19,9 +18,9 @@ import org.roda.core.data.exceptions.AuthorizationDeniedException;
 import org.roda.core.data.exceptions.GenericException;
 import org.roda.core.data.exceptions.NotFoundException;
 import org.roda.core.data.exceptions.RequestNotValidException;
-import org.roda.core.data.utils.JsonUtils;
 import org.roda.core.data.v2.ri.RelationObjectType;
 import org.roda.core.data.v2.ri.RepresentationInformation;
+import org.roda.core.data.v2.ri.RepresentationInformationRelation;
 import org.roda.core.data.v2.ri.RepresentationInformationSupport;
 import org.roda.core.index.IndexingAdditionalInfo;
 import org.roda.core.index.schema.AbstractSolrCollection;
@@ -29,13 +28,11 @@ import org.roda.core.index.schema.CopyField;
 import org.roda.core.index.schema.Field;
 import org.roda.core.index.schema.SolrCollection;
 import org.roda.core.index.utils.SolrUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class RepresentationInformationCollection
   extends AbstractSolrCollection<RepresentationInformation, RepresentationInformation> {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(RepresentationInformationCollection.class);
+  public static final String CONTENT_TYPE = "content_type";
 
   @Override
   public Class<RepresentationInformation> getIndexClass() {
@@ -54,7 +51,7 @@ public class RepresentationInformationCollection
 
   @Override
   public List<String> getCommitIndexNames() {
-    return Arrays.asList(RodaConstants.INDEX_REPRESENTATION_INFORMATION);
+    return List.of(RodaConstants.INDEX_REPRESENTATION_INFORMATION);
   }
 
   @Override
@@ -66,16 +63,13 @@ public class RepresentationInformationCollection
   public List<Field> getFields() {
     List<Field> fields = new ArrayList<>(super.getFields());
 
-    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_NAME, Field.TYPE_TEXT).setRequired(true)
+    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_NAME, Field.TYPE_TEXT).setRequired(false)
       .setMultiValued(false));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_DESCRIPTION, Field.TYPE_TEXT).setMultiValued(false));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_FAMILY, Field.TYPE_STRING));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_TAGS, Field.TYPE_STRING).setMultiValued(true));
-    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_EXTRAS, Field.TYPE_TEXT).setMultiValued(false));
 
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_SUPPORT, Field.TYPE_STRING));
-    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS, Field.TYPE_STRING).setIndexed(false)
-      .setDocValues(false));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS_WITH_RI, Field.TYPE_STRING).setStored(false)
       .setMultiValued(true));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_FILTERS, Field.TYPE_STRING).setMultiValued(true));
@@ -84,6 +78,12 @@ public class RepresentationInformationCollection
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_CREATED_BY, Field.TYPE_STRING));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_UPDATED_ON, Field.TYPE_DATE));
     fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_UPDATED_BY, Field.TYPE_STRING));
+
+    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_TITLE, Field.TYPE_STRING));
+    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_LINK, Field.TYPE_STRING));
+    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_RELATION_TYPE, Field.TYPE_STRING));
+    fields.add(new Field(RodaConstants.REPRESENTATION_INFORMATION_OBJECT_TYPE, Field.TYPE_STRING));
+    fields.add(new Field(CONTENT_TYPE, Field.TYPE_STRING));
 
     fields.add(SolrCollection.getSortFieldOf(RodaConstants.REPRESENTATION_INFORMATION_NAME));
 
@@ -106,15 +106,12 @@ public class RepresentationInformationCollection
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_DESCRIPTION, ri.getDescription());
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_FAMILY, ri.getFamily());
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_TAGS, ri.getTags());
-    doc.addField(RodaConstants.REPRESENTATION_INFORMATION_EXTRAS, ri.getExtras());
-
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_SUPPORT, ri.getSupport().toString());
-    doc.addField(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS, JsonUtils.getJsonFromObject(ri.getRelations()));
 
     if (ri.getRelations() != null) {
       doc.addField(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS_WITH_RI,
         ri.getRelations().stream().filter(r -> RelationObjectType.REPRESENTATION_INFORMATION.equals(r.getObjectType()))
-          .map(r -> r.getLink()).collect(Collectors.toList()));
+          .map(RepresentationInformationRelation::getLink).toList());
     }
 
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_FILTERS, ri.getFilters());
@@ -122,6 +119,27 @@ public class RepresentationInformationCollection
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_CREATED_BY, ri.getCreatedBy());
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_UPDATED_ON, SolrUtils.formatDate(ri.getUpdatedOn()));
     doc.addField(RodaConstants.REPRESENTATION_INFORMATION_UPDATED_BY, ri.getUpdatedBy());
+
+    // Added to distinguish parent documents from nested documents
+    doc.addField(CONTENT_TYPE, "ri");
+
+    List<SolrInputDocument> children = new ArrayList<>();
+    int i = 0;
+    for (RepresentationInformationRelation relation : ri.getRelations()) {
+      SolrInputDocument representationInformationRelation = new SolrInputDocument();
+      representationInformationRelation.addField(RodaConstants.INDEX_UUID, ri.getUUID() + "!" + ++i);
+      representationInformationRelation.addField(RodaConstants.REPRESENTATION_INFORMATION_TITLE, relation.getTitle());
+      representationInformationRelation.addField(RodaConstants.REPRESENTATION_INFORMATION_LINK, relation.getLink());
+      representationInformationRelation.addField(RodaConstants.REPRESENTATION_INFORMATION_RELATION_TYPE,
+        relation.getRelationType());
+      representationInformationRelation.addField(RodaConstants.REPRESENTATION_INFORMATION_OBJECT_TYPE,
+        relation.getObjectType().toString());
+      representationInformationRelation.addField(CONTENT_TYPE, "relation");
+
+      children.add(representationInformationRelation);
+    }
+
+    doc.setField(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS, children);
 
     return doc;
   }
@@ -140,7 +158,9 @@ public class RepresentationInformationCollection
 
     ri.setSupport(SolrUtils.objectToEnum(doc.get(RodaConstants.REPRESENTATION_INFORMATION_SUPPORT),
       RepresentationInformationSupport.class, RepresentationInformationSupport.KNOWN));
-    ri.setRelations(SolrUtils.objectToListRelation(doc.get(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS)));
+
+    ri.setRelations(
+      SolrUtils.objectToRepresentationInformationRelation(doc.get(RodaConstants.REPRESENTATION_INFORMATION_RELATIONS)));
 
     ri.setFilters(SolrUtils.objectToListString(doc.get(RodaConstants.REPRESENTATION_INFORMATION_FILTERS)));
 
@@ -152,5 +172,4 @@ public class RepresentationInformationCollection
     return ri;
 
   }
-
 }
